Upgrate to eclipse-temurin 25 (#405)